@@ -24,12 +24,12 @@ public class MySQLDatabaseConnector implements DatabaseConnector {
     public MySQLDatabaseConnector(DatabaseConnectionSettingsImpl dbSettings) {
         this.dbSettings = dbSettings;
         try {
-            Class.forName("com.mysql.jdbc.Driver").newInstance();
+            Class.forName("com.mysql.jdbc.Driver").getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             Bukkit.getLogger().severe("Could not instantiate JDBC driver! " + e.getMessage());
         }
-        // jdbc:mysql://localhost:3306/Peoples?autoReconnect=true&useSSL=false
-        connectionUrl = "jdbc:mysql://" + dbSettings.getHost() + ":" + dbSettings.getPort() + "/" + dbSettings.getDatabaseName() + "?autoReconnect=true&useSSL=false&allowMultiQueries=true";
+        connectionUrl = "jdbc:mysql://" + dbSettings.getHost() + ":" + dbSettings.getPort() + "/" + dbSettings.getDatabaseName()
+        + "?autoReconnect=true&useSSL=false&allowMultiQueries=true";
     }
 
     @Override
